<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UI Generic</string>
    <string name="about_title">About</string>
    <string name="about_message">UI Generic, version 1.0</string>
    <string name="action_add_test_data">Add Test Data</string>
    <string name="action_sort">Sort by</string>
    <string name="action_sort_as_is">as is</string>
    <string name="action_sort_name">name</string>
    <string name="action_sort_name_ignore_case">name ignore case</string>
    <string name="action_sort_name_natural">name natural</string>
    <string name="action_sort_reverse">reverse</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_restore">Restore</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all">Delete All</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search data...</string>

    <string name="test_item_detail_0">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
    <string name="test_item_detail_1">Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\n\
Nonononono Nonononono Nonononono\
</string>
    <string name="test_item_detail_2">Aaaaaaaa Aaaaaaaa Aaaaaaaa Aaaaaaaa Aaaaaaaa\n\
Bbbbbbbb Bbbbbbbb Bbbbbbbb Bbbbbbbb Bbbbbbbb\n\
Cccccccc Cccccccc Cccccccc Cccccccc Cccccccc\n\
Dddddddd Dddddddd Dddddddd Dddddddd Dddddddd\n\
Eeeeeeee Eeeeeeee Eeeeeeee Eeeeeeee Eeeeeeee\n\
\n\
Ffffffff Ffffffff Ffffffff Ffffffff Ffffffff\n\
Gggggggg Gggggggg Gggggggg Gggggggg Gggggggg\n\
Hhhhhhhh Hhhhhhhh Hhhhhhhh Hhhhhhhh Hhhhhhhh\n\
Iiiiiiii Iiiiiiii Iiiiiiii Iiiiiiii Iiiiiiii\n\
Jjjjjjjj Jjjjjjjj Jjjjjjjj Jjjjjjjj Jjjjjjjj\n\
\n\
Kkkkkkkk Kkkkkkkk Kkkkkkkk Kkkkkkkk Kkkkkkkk\n\
Llllllll Llllllll Llllllll Llllllll Llllllll\n\
Mmmmmmmm Mmmmmmmm Mmmmmmmm Mmmmmmmm Mmmmmmmm\n\
Nnnnnnnn Nnnnnnnn Nnnnnnnn Nnnnnnnn Nnnnnnnn\n\
Oooooooo Oooooooo Oooooooo Oooooooo Oooooooo\n\
\n\
Pppppppp Pppppppp Pppppppp Pppppppp Pppppppp\n\
Qqqqqqqq Qqqqqqqq Qqqqqqqq Qqqqqqqq Qqqqqqqq\n\
Rrrrrrrr Rrrrrrrr Rrrrrrrr Rrrrrrrr Rrrrrrrr\n\
Ssssssss Ssssssss Ssssssss Ssssssss Ssssssss\n\
Tttttttt Tttttttt Tttttttt Tttttttt Tttttttt\n\
\n\
Uuuuuuuu Uuuuuuuu Uuuuuuuu Uuuuuuuu Uuuuuuuu\n\
Vvvvvvvv Vvvvvvvv Vvvvvvvv Vvvvvvvv Vvvvvvvv\n\
Wwwwwwww Wwwwwwww Wwwwwwww Wwwwwwww Wwwwwwww\n\
Xxxxxxxx Xxxxxxxx Xxxxxxxx Xxxxxxxx Xxxxxxxx\n\
Yyyyyyyy Yyyyyyyy Yyyyyyyy Yyyyyyyy Yyyyyyyy\n\
\n\
Zzzzzzzz Zzzzzzzz Zzzzzzzz Zzzzzzzz Zzzzzzzz</string>

</resources>
