<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_add_test_data"
        android:title="@string/action_add_test_data"/>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_action_sort_by_size"
        android:title="@string/action_sort">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_as_is"
                    android:title="@string/action_sort_as_is"/>
                <item
                    android:id="@+id/action_sort_name"
                    android:title="@string/action_sort_name"/>
                <item
                    android:id="@+id/action_sort_name_ignore_case"
                    android:title="@string/action_sort_name_ignore_case"/>
                <item
                    android:id="@+id/action_sort_name_natural"
                    android:title="@string/action_sort_name_natural"/>
            </group>
            <item
                android:id="@+id/action_sort_reverse"
                android:checkable="true"
                android:title="@string/action_sort_reverse"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/dic_action_search"
        android:title="@string/search_title"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete_all"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/action_delete_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/action_help"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>

</menu>
