<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_as_is"
                    android:title="@string/action_sort_as_is"/>
                <item
                    android:id="@+id/action_sort_name"
                    android:title="@string/action_sort_name"/>
                <item
                    android:id="@+id/action_sort_name_ignore_case"
                    android:title="@string/action_sort_name_ignore_case"/>
                <item
                    android:id="@+id/action_sort_name_natural"
                    android:title="@string/action_sort_name_natural"/>
            </group>
            <item
                android:id="@+id/action_sort_reverse"
                android:checkable="true"
                android:title="@string/action_sort_reverse"/>
        </menu>
    </item>
</menu>
