<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_restore"
        android:icon="@drawable/ic_restore_white_24dp"
        android:title="@string/action_restore"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_clear_white_24dp"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_remove"
        app:showAsAction="ifRoom"/>

</menu>
